--- a/src/components/calculate.component.html
+++ b/src/components/calculate.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-xs-12 col-lg-8 col-lg-push-2">
+    <div class="col-xs-12 col-lg-8 col-lg-offset-2">
       <h1>tell us your specifications :</h1><hr>
       <h5>NUMBER OF PAGES:</h5>
       <div class="row">
@@ -76,9 +76,8 @@
       </div>
       <div class="row">
         <div class="col-xs-6 col-xs-push-4">
-          <button type="button" class="btn btn-success btn-lg" ng-click="$ctrl.calc()" ui-sref="info">proceed</button>
+          <button type="button" class="btn btn-warning btn-lg" ng-click="$ctrl.calc()" ui-sref="statistics">See Pricing</button>
         </div>
-
       </div>
     </div>
   </div>
