--- a/src/components/statistics.component.html
+++ b/src/components/statistics.component.html
@@ -55,7 +55,7 @@
       <p>Please complete the web form below for an exact project quote</p>
       <div class="row">
         <div class="col-xs-8 col-xs-push-2">
-          <form class="form-horizontal" novalidate name="infoForm" action="mail.php">
+          <form class="form-horizontal" novalidate name="infoForm" action="mail.php" method="POST">
             <div class="form-group">
               <label for="name">name : </label> <span class="span-warning">*</span>
               <input required name="name"
