--- a/src/components/statistics.component.html
+++ b/src/components/statistics.component.html
@@ -17,14 +17,14 @@
           <tr ng-repeat="item in $ctrl.table">
             <td style="width : 30%">{{item.genre}}</td>
             <td style="width : 30%">{{item.choice.label}}</td>
-            <td style="width : 20%" class="min">{{item.choice.min}}</td>
-            <td style="width : 20%" class="max">{{item.choice.max}}</td>
+            <td style="width : 20%" class="min">{{item.choice.min| currency : $ : 0}}</td>
+            <td style="width : 20%" class="max">{{item.choice.max| currency : $ : 0}}</td>
           </tr>
           <tr>
             <td style="width : 30%"></td>
             <td style="width : 30%">total cost</td>
-            <td style="width : 20%" class="cost">{{$ctrl.cost.min}}</td>
-            <td style="width : 20%" class="cost">{{$ctrl.cost.max}}</td>
+            <td style="width : 20%" class="cost">{{$ctrl.cost.min| currency : $ : 0}}</td>
+            <td style="width : 20%" class="cost">{{$ctrl.cost.max| currency : $ : 0}}</td>
           </tr>
         </tbody>
       </table>
@@ -35,72 +35,98 @@
           Apply one of our awesome discounts
         </div>
         <div class="col-xs-4">
-          <button type="button" class="btn btn-default btn-lg" ng-click="$ctrl.setSale(1)">new user</button>
+          <button type="button" class="btn btn-default btn-md" ng-click="$ctrl.setSale(1)">new user</button>
         </div>
         <div class="col-xs-4">
-          <button type="button" class="btn btn-default btn-lg" ng-click="$ctrl.setSale(2)">returning user</button>
+          <button type="button" class="btn btn-default btn-md" ng-click="$ctrl.setSale(2)">returning user</button>
         </div>
         <div class="col-xs-4">
-          <button type="button" class="btn btn-default btn-lg" ng-click="$ctrl.setSale(3)">non-profit discount</button>
+          <button type="button" class="btn btn-default btn-md" ng-click="$ctrl.setSale(3)">non-profit discount</button>
         </div>
       </div>
       <div class="row" ng-if="$ctrl.saleApplied">
         <h5>Estimated Cost after discount : </h5>
-        <h2>{{$ctrl.sale.min}}$ - {{$ctrl.sale.max}}$</h2>
+        <h2>{{$ctrl.sale.min| currency : $ : 0}} - {{$ctrl.sale.max| currency : $ : 0}}</h2>
         <div class="col-xs-6 col-xs-push-3">
           <button type="button" class="btn btn-danger btn-lg" ng-click="$ctrl.cancelSale()">apply another sale</button>
         </div>
       </div>
       <hr>
-      <p>Please complete the web form below for an exact project quote</p>
+      <p>Please complete the web form below for an exact project quote</p><br>
+      <span class="pictogram arrow">⬇</span>
       <div class="row">
-        <div class="col-xs-8 col-xs-push-2">
+        <div class="col-xs-10">
           <form class="form-horizontal" novalidate name="infoForm" action="mail.php" method="POST">
             <div class="form-group">
-              <label for="name">name : </label> <span class="span-warning">*</span>
-              <input required name="name"
-              minlength="4" type="text" ng-model="$ctrl.info.name" class="form-control" id="name" placeholder="name">
-              <span ng-if="(infoForm.name.$error.required)&&(infoForm.name.$touched)"
-                        class="span-warning">
-                     * required !
-              </span>
-              <span ng-if="infoForm.name.$error.minlength && infoForm.name.$touched"
-                         class="span-warning">
-                     name must be at least 4 characters
-              </span>
+              <div class="col-xs-4">
+                <label for="message">QUOTE DETAILS</label> <span class="span-warning">*</span>
+              </div>
+              <div class="col-xs-8">
+                <textarea ng-model="$ctrl.quote" class="form-control" id="message" placeholder="message"
+                style="min-height : 200px;" required name="message"></textarea>
+              </div>
+              <div class="col-xs-12">
+                <span ng-if="(infoForm.message.$error.required)&&(infoForm.message.$touched)"
+                          class="span-warning">
+                       * required !
+                </span>
+              </div>
             </div>
             <div class="form-group">
-              <label for="email">email : </label> <span class="span-warning">*</span>
-              <input required type="email" ng-model="$ctrl.info.email" class="form-control" id="email"
-              name="email" placeholder="example@example.com">
-              <span class="span-warning"
-                ng-if="infoForm.email.$invalid && infoForm.email.$touched">
-                *must be a valid email address</span>
+              <div class="col-xs-4">
+                <label for="name">NAME</label> <span class="span-warning">*</span>
+              </div>
+              <div class="col-xs-8">
+                <input required name="name"
+                minlength="4" type="text" ng-model="$ctrl.info.name" class="form-control" id="name" placeholder="name">
+              </div>
+              <div class="col-xs-12">
+                <span ng-if="(infoForm.name.$error.required)&&(infoForm.name.$touched)"
+                          class="span-warning">
+                       * required !
+                </span>
+                <span ng-if="infoForm.name.$error.minlength && infoForm.name.$touched"
+                           class="span-warning">
+                       name must be at least 4 characters
+                </span>
+              </div>
             </div>
             <div class="form-group">
-              <label for="number">phone number : </label>
-              <input type="text" ng-model="$ctrl.info.phone" class="form-control" id="number"
-              name="phone" placeholder="###-###-####" pattern="(\d{3})-(\d{3})-(\d{4})">
-              <span class="span-warning"
-                ng-if="infoForm.phone.$invalid && infoForm.phone.$touched">
-                *must be a valid phone number (###-###-####)</span>
+              <div class="col-xs-4">
+                <label for="email">EMAIL</label> <span class="span-warning">*</span>
+              </div>
+              <div class="col-xs-8">
+                <input required type="email" ng-model="$ctrl.info.email" class="form-control" id="email"
+                name="email" placeholder="example@example.com">
+              </div>
+              <div class="col-xs-12">
+                <span class="span-warning"
+                  ng-if="infoForm.email.$invalid && infoForm.email.$touched">
+                  *must be a valid email address</span>
+              </div>
             </div>
             <div class="form-group">
-              <label for="company">company : </label>
-              <input type="text" ng-model="$ctrl.info.company" class="form-control"
-              name="company" id="company" placeholder="company">
+              <div class="col-xs-4">
+                <label for="number">PHONE</label>
+              </div>
+              <div class="col-xs-8">
+                <input type="text" ng-model="$ctrl.info.phone" class="form-control" id="number"
+                name="phone" placeholder="###-###-####">
+              </div>
             </div>
             <div class="form-group">
-              <label for="message">Quote details</label>
-              <textarea ng-model="$ctrl.quote" class="form-control" id="message" placeholder="message"
-              style="min-height : 200px;" required name="message"></textarea>
-              <span ng-if="(infoForm.message.$error.required)&&(infoForm.message.$touched)"
-                        class="span-warning">
-                     * required !
-              </span>
+              <div class="col-xs-4">
+                <label for="company">COMPANY</label>
+              </div>
+              <div class="col-xs-8">
+                <input type="text" ng-model="$ctrl.info.company" class="form-control"
+                name="company" id="company" placeholder="company">
+              </div>
             </div>
-            <input type="submit" name="submit" value="get detailed quote"
-            ng-disabled="infoForm.$invalid"class="btn btn-warning btn-lg">
+            <div class="col-xs-8 col-xs-push-4">
+              <input type="submit" name="submit" value="get detailed quote"
+              ng-disabled="infoForm.$invalid" class="btn btn-warning btn-lg">
+            </div>
           </form>
         </div>
       </div>
