--- a/src/components/statistics.component.html
+++ b/src/components/statistics.component.html
@@ -1,4 +1,6 @@
 <div class="container">
+  <h1>PROJECT QUOTE CALCULATOR</h1>
+  <h5>Here is your free quote! This quote is an estimate</h5>
   <div class="row">
     <div class="col-xs-10 col-xs-offset-1">
       <button type="button" name="button" class="btn btn-warning back" ui-sref="calculate">get another quote</button>
